--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-scroll": "^1.8.7",
+    "react-scroll-parallax": "^3.3.1",
     "sass": "^1.54.4",
     "sharp": "^0.31.0"
   },
