--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-scroll": "^1.8.7",
     "react-scroll-parallax": "^3.3.1",
     "sass": "^1.54.4",
-    "sharp": "^0.31.0"
+    "sharp": "^0.31.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/node": "18.7.4",
