--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-videos": "^1.5.0",
     "npm": "^8.19.2",
     "react": "18.2.0",
+    "react-burger-menu": "^3.0.8",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-scroll": "^1.8.7",
