--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-burger-menu": "^3.0.8",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-parallax": "^3.5.1",
     "react-scroll": "^1.8.7",
     "react-scroll-parallax": "^3.3.1",
     "sass": "^1.54.4",
